--- a/lecture10/pset10/appetieats/static/css/admin/add.css
+++ b/lecture10/pset10/appetieats/static/css/admin/add.css
@@ -10,7 +10,7 @@
 
 .std-input-box input {
     width: 100%;
-    margin: 0.5rem 0;
+    margin: 0.5rem 0 1rem 0;
     padding: 0.8rem 1.2rem;
     border: 1px solid var(--std-spacegray);
     outline: 1px solid var(--std-spacegray);
