--- a/lecture10/pset10/appetieats/templates/admin/settings/add.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings/add.html
@@ -6,98 +6,38 @@
 {% endblock %}
 
 {% block main %}
-<div class="form-container mx-auto">
-    <h1 class="mt-5 mb-3 text-center">Add dish</h1>
-    <form>
-        <div class="form-row">
-            <div class="col-md-6 mb-3">
-                <label for="name">Dish name</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="e.g., hamburger, macaroni..." required>
-                <div class="invalid-feedback">
-                    Insert a name of dish
-                </div>
-            </div>
-
-            <div class="col-md-6 mb-3">
-                <label for="price">Price</label>
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroupPrepend">$</span>
-                    </div>
-                    <input type="text" class="form-control" id="price" name="price" required>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="col-12 mb-3">
-            <label for="category">Category</label>
-            <select class="form-select" id="category" name="category" required>
-                <option value="" selected disabled>Select a category</option>
-                {% for category in categories %}
-                <option value="{{ category['category_name'] }}">{{ category["category_name"] }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="col-12 mb-3">
-            <label for="barcode">Barcode</label>
-            <input type="text" class="form-control" id="barcode" name="barcode" placeholder="e.g., 108745..." required>
-            <div class="invalid-feedback">
-                Insert a valid barcode.
-            </div>
-        </div>
-        <div class="col-12 mb-3">
-            <label for="file" class="form-label">Dish image</label>
-            <input class="form-control" type="file" id="img" name="img">
-            <div class="invalid-feedback">
-                Insert a valid image.
-            </div>
-        </div>
-        <div id="image-form" class="col-12" style="display: none;" >
-            <canvas id="canvas" style="display: none; max-height: 250px;"></canvas>
-        </div>
-
-        <button class="btn btn-primary mt-3" type="submit">Add dish</button>
-    </form>
-
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/2.3.3/cropper.js"></script>
-
-<script src="/static/js/add/crop-image.js"></script>
 
 <form method="post" action="/#" >
     <div class="form-header">
-        <div class="title">
+        <div class="title mt-5 text-center">
             <h1>Add product</h1>
         </div>
     </div>
 
     <div class="input-box">
-        <div class="input-group">
-            <div class="std-input-box">
+        <div class="row">
+            <div class="col-md-6 std-input-box">
                 <label for="name">Product name: </label>
-                <input id="name" name="name" class="std-input required" type="text" placeholder="Type product name" required>
+                <input id="name" name="name" class="std-input required" type="text" placeholder="e.g., hamburger, macaroni..." required>
             </div>
-        </div>
 
-        <div class="input-group">
-            <div class="std-input-box">
+            <div class="col-md-6 std-input-box">
                 <label for="price">Price: </label>
                 <input id="price" name="price" class="std-input required" type="text" required>
             </div>
         </div>
-        <div class="input-group">
+
+        <div class="row">
             <div class="std-input-box">
-                <label for="category">Category: </label>
-                <input id="category" name="category" class="std-input required" type="text" required>
+                <label for="category">Barcode: </label>
+                <input id="category" name="category" class="std-input required" type="text" inputmode="numeric" placeholder="e.g., 108745..." required>
             </div>
         </div>
 
-        <div class="input-group">
+        <div class="row">
             <div class="std-input-box">
                 <label for="category">Category</label>
-                <select class="form-select" id="category" name="category" required>
+                <select class="" id="category" name="category" required>
                     <option value="" selected disabled>Select a category</option>
                     {% for category in categories %}
                     <option value="{{ category['category_name'] }}">{{ category["category_name"] }}</option>
@@ -106,10 +46,29 @@
             </div>
         </div>
 
-        <button class="std-button mt-2" type="submit">Add product</button>
+        <div class="row">
+            <div class="std-input-box">
+                <div class="std-input-box">
+                    <label for="file" class="form-label">Dish image</label>
+                    <input class="form-control" type="file" id="img" name="img">
+                    <div class="invalid-feedback">
+                        Insert a valid image.
+                    </div>
+                </div>
+                <div id="image-form">
+                    <canvas id="canvas"></canvas>
+                </div>
+            </div>
+        </div>
+
+        <button class="std-button mt-3" type="submit">Add product</button>
     </div>
 </form>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/2.3.3/cropper.js"></script>
+
+<script src="/static/js/add/crop-image.js"></script>
 <script>
     let priceInput = document.getElementById('price');
 
