--- a/lecture10/pset10/appetieats/templates/admin/settings/add.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings/add.html
@@ -69,27 +69,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/2.3.3/cropper.js"></script>
 
 <script src="/static/js/add/crop-image.js"></script>
-<script>
-    let priceInput = document.getElementById('price');
-
-    // Define a standard value for price field
-    priceInput.value = '$ 0.00';
-
-    // Format the field price when reload page
-    let price = priceInput.value;
-    price = price.replace(/\D/g, '');
-    price = `$ ` + (price / 100).toFixed(2)
-    priceInput.value = price;
-
-    priceInput.addEventListener('input', function(event) {
-        let price = event.target.value;
-
-        price = price.replace(/\D/g, '');
-        price = `$ ` + (price / 100).toFixed(2)
-
-        event.target.value = price;
-    });
-</script>
+<script src="/static/js/add/format-price.js"></script>
 {% endblock %}
 
 {% block edit %}{% endblock %}
