update: add page

--- a/lecture10/pset10/appetieats/templates/admin/settings/add.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings/add.html
@@ -7,7 +7,7 @@
 
 {% block main %}
 
-<form method="post" action="/#" >
+<form method="post" action="/admin/settings/add" >
     <div class="form-header">
         <div class="title mt-5 text-center">
             <h1>Add product</h1>
