feature: categories page

--- a/lecture10/pset10/appetieats/templates/admin/settings.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings.html
@@ -9,7 +9,14 @@
         <a href="/admin/settings/add" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
             <span class="material-icons nav_icons mx-1">add_circle</span>
             <span class="flex-grow-1 text-start">
-                Add dish
+                Add product
+            </span>
+            <span class="material-icons nav_icons">chevron_right</span>
+        </a>
+        <a href="/admin/settings/manage-categories" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons mx-1">build</span>
+            <span class="flex-grow-1 text-start">
+                Manage categories
             </span>
             <span class="material-icons nav_icons">chevron_right</span>
         </a>
