--- a/lecture10/pset10/appetieats/templates/admin/settings/add.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings/add.html
@@ -40,7 +40,7 @@
                 <select class="" id="category" name="category" required>
                     <option value="" selected disabled>Select a category</option>
                     {% for category in categories %}
-                    <option value="{{ category['category_name'] }}">{{ category["category_name"] }}</option>
+                    <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                     {% endfor %}
                 </select>
             </div>
