update: add page

--- a/lecture10/pset10/appetieats/templates/admin/settings/add.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings/add.html
@@ -29,8 +29,8 @@
 
         <div class="row">
             <div class="std-input-box">
-                <label for="category">Barcode: </label>
-                <input id="category" name="category" class="std-input required" type="text" inputmode="numeric" placeholder="e.g., 108745..." required>
+                <label for="barcode">Barcode: </label>
+                <input id="barcode" name="barcode" class="std-input required" type="text" inputmode="numeric" placeholder="e.g., 108745..." required>
             </div>
         </div>
 
