--- a/lecture10/pset10/appetieats/static/css/admin/add.css
+++ b/lecture10/pset10/appetieats/static/css/admin/add.css
@@ -9,8 +9,11 @@
     width: 100%;
 }
 */
+textarea {
+    resize: none;
+}
 
-.std-input-box input, select {
+.std-input-box input, select, textarea {
     width: 100%;
     margin: 0.5rem 0 1rem 0;
     padding: 0.8rem 1.2rem;
