--- a/lecture10/pset10/appetieats/templates/error.html
+++ b/lecture10/pset10/appetieats/templates/error.html
@@ -1,6 +1,6 @@
-{% extends "layout-login-form.html" %}
+{% extends "/auth/layout-login-form.html" %}
 {% block img %}
-<img src="static/assets/img/undraw_void_-3-ggu.svg" alt="cooking image">
+<img src="/static/assets/img/undraw_void_-3-ggu.svg" alt="cooking image">
 {% endblock %}
 
 {% block form %}
