--- a/lecture10/pset10/appetieats/templates/admin/settings.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings.html
@@ -20,7 +20,7 @@
             </span>
             <span class="material-icons nav_icons">chevron_right</span>
         </a>
-        <a href="/#" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+        <a href="/admin/settings/edit-menu" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
             <span class="material-icons nav_icons mx-1">edit</span>
             <span class="flex-grow-1 text-start">
                 Edit menu
