--- a/lecture10/pset10/appetieats/templates/admin/settings/edit-menu-form.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings/edit-menu-form.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <button class="std-button mt-3" type="submit">Add product</button>
+        <button class="std-button mt-3" type="submit">Edit product</button>
     </div>
 </form>
 
