update: add login button on landing page

--- a/lecture10/pset10/appetieats/static/css/styles.css
+++ b/lecture10/pset10/appetieats/static/css/styles.css
@@ -110,4 +110,8 @@
     .button {
         font-size: 1rem;
     }
+    .login {
+        padding: 0.25rem 0.25rem !important;
+        margin-left: -0.25rem;
+    }
 }
