--- a/lecture10/pset10/appetieats/templates/landing.html
+++ b/lecture10/pset10/appetieats/templates/landing.html
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
                         <li class="nav-item"><a class="nav-link" href="#prices">Prices</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link btn button login" href="/login">Login</a></li>
                     </ul>
                 </div>
             </div>
