--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -1,2 +1,26 @@
 .products-line {
+    display: flex;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 -0.5rem;
 }
+
+.overlay {
+    overflow: visible;
+    white-space: wrap;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    display: flex;
+    align-items: center;
+    z-index: 999;
+    flex-flow: row wrap;
+}
+
+.card {
+    margin: 0 0.5rem;
+}
+
