--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -22,9 +22,9 @@
         <h3>{{ category.category_name }}</h3>
         <button class="view-all-button">ver tudo</button>
     </div>
+    <div class="products-line">
     {% for product in products %}
     {% if product.category_id == category.id %}
-    <div class="products-line">
         <div class="col-6 col-md-4 col-lg-3 mb-3 p-0">
             <div class="card">
                 <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0 img-border" alt="{{ product.name }}">
@@ -34,9 +34,9 @@
                 </div>
             </div>
         </div>
-    </div>
     {% endif %}
     {% endfor %}
+    </div>
 {% endfor %}
 
 
@@ -59,6 +59,7 @@
     p
 
 </div>
+<script src="/static/js/menu/toggle-overlay.js"></script>
 {% endblock %}
 
 {% block edit %}{% endblock %}
