--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -1,26 +1,37 @@
-.products-line {
-    display: flex;
-    overflow: hidden;
-    white-space: nowrap;
-    margin: 0 -0.5rem;
-}
-
 .overlay {
-    overflow: visible;
-    white-space: wrap;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.overlay.active {
     display: flex;
-    align-items: center;
-    z-index: 999;
-    flex-flow: row wrap;
+}
+
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1;
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.products-scrollable {
+    max-height: 80vh;
+    overflow-y: auto;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .card {
     margin: 0 0.5rem;
 }
-
