--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -22,20 +22,40 @@
         <h3>{{ category.category_name }}</h3>
         <button class="view-all-button">See more</button>
     </div>
+
     <div class="products-line">
-    {% for product in products %}
-    {% if product.category_id == category.id %}
-        <div class="col-6 col-md-4 col-lg-3 mb-3 p-0">
-            <div class="card">
-                <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0 img-border" alt="{{ product.name }}">
-                <div class="card-body p-2 d-flex flex-column align-items-start">
-                    <h6 class="p-title mb-2">{{ product.name }}</h6>
-                    <h6 class="price mt-auto mb-0">${{ "%.2f" | format(product.price) }}</h6>
+        {% for product in products %}
+            {% if product.category_id == category.id %}
+                <div class="col-6 col-md-4 col-lg-3 mb-3 p-0">
+                    <div class="card">
+                        <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0 img-border" alt="{{ product.name }}">
+                        <div class="card-body p-2 d-flex flex-column align-items-start">
+                            <h6 class="p-title mb-2">{{ product.name }}</h6>
+                            <h6 class="price mt-auto mb-0">${{ "%.2f" | format(product.price) }}</h6>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+    <div class="overlay">
+        <button class="back-button">back</button>
+        <div class="main-overlay">
+            {% for product in products %}
+                {% if product.category_id == category.id %}
+                    <div class="col-6 col-md-4 col-lg-3 mb-3 p-0">
+                        <div class="card">
+                            <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0 img-border" alt="{{ product.name }}">
+                            <div class="card-body p-2 d-flex flex-column align-items-start">
+                                <h6 class="p-title mb-2">{{ product.name }}</h6>
+                                <h6 class="price mt-auto mb-0">${{ "%.2f" | format(product.price) }}</h6>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+
         </div>
-    {% endif %}
-    {% endfor %}
     </div>
 {% endfor %}
 
