--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -6,20 +6,49 @@
 }
 
 .overlay {
-    overflow: visible;
     position: fixed;
     top: 0;
-    left: 0;
+    right: -100%;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-    display: flex;
-    align-items: center;
+    background-color: white;
     z-index: 99;
+    padding-top: 3rem;
+    transition: right 0.3s ease;
+}
+.main-overlay {
+    width: 100%;
+    height: 100%;
+    justify-content: flex-start;
     flex-flow: row wrap;
-    padding: 0 2rem;
+    overflow-y: auto;
+    align-items: flex-start;
+    display: flex;
+    padding: 0 5%;
+}
+
+.overlay.active {
+    right: 0;
+}
+
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1;
+    background-color: transparent;
+    border: none;
+    color: red;
+    cursor: pointer;
 }
 
 .card {
     margin: 0 0.5rem;
+}
+
+.p-title {
+    max-width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
