--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -39,7 +39,13 @@
         {% endfor %}
     </div>
     <div class="overlay">
-        <button class="back-button">back</button>
+        <button class="back-button d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons">chevron_left</span>
+            <span class="flex-grow-1 text-start">
+                Back
+            </span>
+
+        </button>
         <div class="main-overlay">
             {% for product in products %}
                 {% if product.category_id == category.id %}
@@ -62,6 +68,7 @@
 
 
 
+<!--
 
 <div class="menu" style="background-color: {{ restaurant_info.color }};">
     <div class="form-header">
@@ -77,6 +84,7 @@
     p
 
 </div>
+-->
 <script src="/static/js/menu/toggle-overlay.js"></script>
 {% endblock %}
 
