--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -1,6 +1,6 @@
 {% extends "menu/menu-layout.html" %}
 
-{% block title %}Menu: {{ restaurant_info.name }}{% endblock %}
+{% block title %}{{ restaurant_info.name }}{% endblock %}
 {% block head %}
 <link href="/static/css/menu/menu.css" rel="stylesheet">
 
@@ -18,10 +18,12 @@
     </div>
 </div>
 {% for category in categories %}
-    <div class="d-flex justify-content-between">
+    <button class="view-all-button d-flex justify-content-between align-items-start">
         <h3>{{ category.category_name }}</h3>
-        <button class="view-all-button">See more</button>
-    </div>
+        <span class="material-icons nav_icons">
+            arrow_forward_ios
+        </span>
+    </button>
 
     <div class="products-line">
         {% for product in products %}
@@ -69,21 +71,20 @@
 
 
 <!--
-
-<div class="menu" style="background-color: {{ restaurant_info.color }};">
-    <div class="form-header">
-        <div class="title mt-5 text-center">
-            <h1>{{ restaurant_info.name }}</h1>
+    <div class="menu" style="background-color: {{ restaurant_info.color }};">
+        <div class="form-header">
+            <div class="title mt-5 text-center">
+                <h1>{{ restaurant_info.name }}</h1>
+            </div>
         </div>
+            <p>address: {{ restaurant_info.address }}</p>
+            <p>phone: {{ restaurant_info.phone }}</p>
     </div>
-        <p>address: {{ restaurant_info.address }}</p>
-        <p>phone: {{ restaurant_info.phone }}</p>
-</div>
 
-<div class="cart" style="background-color: {{ restaurant_info.color }};">
-    p
+    <div class="cart" style="background-color: {{ restaurant_info.color }};">
+        p
 
-</div>
+    </div>
 -->
 <script src="/static/js/menu/toggle-overlay.js"></script>
 {% endblock %}
