--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -1,3 +1,25 @@
+/* to fix */
+.menu {
+    position: fixed;
+    top: 0;
+    transition: all 0.3s ease;
+    left: 0;
+    right: -50%;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.cart {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    z-index: 98;
+}
+
+/* code */
 .products-line {
     display: flex;
     overflow-x: auto;
@@ -16,6 +38,7 @@
     padding-top: 3rem;
     transition: right 0.3s ease;
 }
+
 .main-overlay {
     width: 100%;
     height: 100%;
@@ -33,8 +56,9 @@
 
 .back-button {
     position: absolute;
-    top: 10px;
+    top: 13px;
     left: 10px;
+    width: 100%;
     z-index: 1;
     background-color: transparent;
     border: none;
@@ -47,8 +71,31 @@
 }
 
 .p-title {
-    max-width: 100%;
-    overflow: hidden;
+    max-width: 100% !important;
+    overflow: hidden !important;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.view-all-button {
+    border: none;
+    background-color: white;
+    width: 100%;
+}
+
+.product-width {
+    width: 23%;
+    flex: 0 0 auto;
+}
+
+
+@media screen and (max-width: 992px) {
+    .product-width {
+        width: 30% !important;
+    }
+}
+@media screen and (max-width: 576px) {
+    .product-width {
+        width: 45% !important;
+    }
 }
