--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -1,4 +1,5 @@
 /* to fix */
+/*
 .menu {
     position: fixed;
     top: 0;
@@ -18,6 +19,7 @@
     height: 100%;
     z-index: 98;
 }
+*/
 
 /* code */
 .products-line {
