--- a/lecture10/pset10/appetieats/templates/menu/menu-layout.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu-layout.html
@@ -48,11 +48,11 @@
         </main>
 
         <nav class="nav">
-            <a href="#menu" class="nav_link {% block dashboard %}{% endblock %}">
+            <a id="menuBtn" href="#menu" class="nav_link {% block dashboard %}{% endblock %}">
                 <span class="material-icons nav_icon">restaurant_menu</span>
                 <span class="nav_text">Menu</span>
             </a>
-            <a href="#cart" class="nav_link {% block settings %}{% endblock %}">
+            <a id="cartBtn" href="#cart" class="nav_link {% block settings %}{% endblock %}">
                 <span class="material-icons nav_icon">shopping_basket</span>
                 <span class="nav_text">Cart</span>
             </a>
