--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -7,54 +7,32 @@
 {% endblock %}
 
 {% block main %}
-<div class="menu">
-    <div class="mx-auto search">
-        <div class="input-group mb-2 mt-4">
-            <span class="input-group-text bg-white border_right_none border_left_round">
-                <span class="material-icons nav_icon">search</span>
-            </span>
-            <input type="text" class="form-control border_left_none border_right_none" placeholder="Search" id="search">
-            <span class="input-group-text bg-white border_left_none border_right_round">
-            </span>
-        </div>
-    </div>
-    {% for category in categories %}
-    <button class="view-all-button d-flex justify-content-between align-items-start">
-        <h3>{{ category.category_name }}</h3>
-        <span class="material-icons nav_icons">
-            arrow_forward_ios
-        </span>
-    </button>
-
-    <div class="products-line">
-        {% for product in products %}
-        {% if product.category_id == category.id %}
-        <div class="product-width">
-            <div class="card">
-                <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0" alt="{{ product.name }}">
-                <div class="card-body p-2 d-flex flex-column align-items-start">
-                    <h6 class="p-title mb-2">{{ product.name }}</h6>
-                    <h6 class="price mt-auto mb-0">${{ "%.2f" | format(product.price) }}</h6>
-                </div>
+<div class="menu-cart-container">
+    <div class="menu active">
+        <div class="mx-auto search">
+            <div class="input-group mb-2 mt-4">
+                <span class="input-group-text bg-white border_right_none border_left_round">
+                    <span class="material-icons nav_icon">search</span>
+                </span>
+                <input type="text" class="form-control border_left_none border_right_none" placeholder="Search" id="search">
+                <span class="input-group-text bg-white border_left_none border_right_round">
+                </span>
             </div>
         </div>
-        {% endif %}
-        {% endfor %}
-    </div>
-    <div class="overlay">
-        <button class="back-button d-flex align-items-start justify-content-start">
-            <span class="material-icons nav_icons">chevron_left</span>
-            <span class="flex-grow-1 text-start">
-                Back
+        {% for category in categories %}
+        <button class="view-all-button d-flex justify-content-between align-items-start">
+            <h3>{{ category.category_name }}</h3>
+            <span class="material-icons nav_icons">
+                arrow_forward_ios
             </span>
-
         </button>
-        <div class="main-overlay">
+
+        <div class="products-line">
             {% for product in products %}
             {% if product.category_id == category.id %}
-            <div class="col-6 col-md-4 col-lg-3 mb-3 p-0">
+            <div class="product-width">
                 <div class="card">
-                    <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0 img-border" alt="{{ product.name }}">
+                    <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0" alt="{{ product.name }}">
                     <div class="card-body p-2 d-flex flex-column align-items-start">
                         <h6 class="p-title mb-2">{{ product.name }}</h6>
                         <h6 class="price mt-auto mb-0">${{ "%.2f" | format(product.price) }}</h6>
@@ -63,21 +41,45 @@
             </div>
             {% endif %}
             {% endfor %}
-
         </div>
-    </div>
-    {% endfor %}
-</div>
+        <div class="overlay">
+            <button class="back-button d-flex align-items-start justify-content-start">
+                <span class="material-icons nav_icons">chevron_left</span>
+                <span class="flex-grow-1 text-start">
+                    Back
+                </span>
 
-<div class="cart">
-    <div style="background-color: {{ restaurant_info.color }};">
-        <div class="form-header">
-            <div class="title mt-5 text-center">
-                <h1>{{ restaurant_info.name }}</h1>
+            </button>
+            <div class="main-overlay">
+                {% for product in products %}
+                {% if product.category_id == category.id %}
+                <div class="product-width">
+                    <div class="card">
+                        <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0 img-border" alt="{{ product.name }}">
+                        <div class="card-body p-2 d-flex flex-column align-items-start">
+                            <h6 class="p-title mb-2">{{ product.name }}</h6>
+                            <h6 class="price mt-auto mb-0">${{ "%.2f" | format(product.price) }}</h6>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+                {% endfor %}
+
             </div>
         </div>
+        {% endfor %}
+    </div>
+
+    <div class="cart deactive">
+        <div>
+            <div class="form-header">
+                <div class="title mt-5 text-center">
+                    <h1>{{ restaurant_info.name }}</h1>
+                </div>
+            </div>
             <p>address: {{ restaurant_info.address }}</p>
             <p>phone: {{ restaurant_info.phone }}</p>
+        </div>
     </div>
 </div>
 
