--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -53,7 +53,7 @@
             <div class="main-overlay">
                 {% for product in products %}
                 {% if product.category_id == category.id %}
-                <div class="product-width">
+                <div class="product-width mb-3">
                     <div class="card">
                         <img src="/static/assets/img/macaroni.jpg" class="card-img-top mt-0 img-border" alt="{{ product.name }}">
                         <div class="card-body p-2 d-flex flex-column align-items-start">
@@ -70,7 +70,7 @@
         {% endfor %}
     </div>
 
-    <div class="cart deactive">
+    <div class="cart">
         <div>
             <div class="form-header">
                 <div class="title mt-5 text-center">
