--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -1,27 +1,3 @@
-/* to fix */
-/*
-.menu {
-    position: fixed;
-    top: 0;
-    transition: all 0.3s ease;
-    left: 0;
-    right: -50%;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-}
-
-.cart {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 100%;
-    height: 100%;
-    z-index: 98;
-}
-*/
-
-/* code */
 .products-line {
     display: flex;
     overflow-x: auto;
@@ -104,47 +80,44 @@
 
 .menu-cart-container {
     display: flex;
+    /*
     overflow: hidden;
     overflow-x: clip;
     flex: 1;
+    */
 }
 
 .menu, .cart {
     transition: left 0.3s ease, all 0.3s ease, opacity 0.3s ease;
-    overflow: hidden;
-    overflow-x: clip;
-    opacity: 1;
+    opacity: 0;
     width: 80%;
     height: 100%;
+    visibility: hidden;
+    /*
+    overflow: hidden;
+    overflow-x: clip;
+    */
 }
 
 .menu {
-    overflow-x: clip;
     position: absolute;
     pointer-events: none;
     margin-left: -100%;
     margin-right: -100%;
-    visibility: hidden;
 }
 
 .cart {
-    position: absolute;
+    /* position: absolute; */
     pointer-events: none;
-    margin-right: 100%;
-    margin-left: 100%;
-    visibility: hidden;
+    margin-right: 90%;
+    margin-left: 90%;
 }
 
-.menu.active {
+.menu.active, .cart.active {
     margin-right: 0;
     margin-left: 0;
     pointer-events: auto;
     visibility: visible;
+    opacity: 1;
 }
 
-.cart.active {
-    margin-right: 0;
-    margin-left: 0;
-    pointer-events: auto;
-    visibility: visible;
-}
