update: menu page

--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -27,7 +27,7 @@
             </span>
         </button>
 
-        <div class="products-line">
+        <div class="products-line mb-3">
             {% for product in products %}
             {% if product.category_id == category.id %}
             <div class="product-width">
