--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -3,6 +3,12 @@
     overflow-x: auto;
     white-space: nowrap;
     margin: 0 -0.5rem;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.button-container::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
 }
 
 .overlay {
@@ -25,7 +31,8 @@
     overflow-y: auto;
     align-items: flex-start;
     display: flex;
-    padding: 0 5%;
+    /*padding: 0 5%;*/
+    margin: 0 5%;
 }
 
 .overlay.active {
@@ -59,6 +66,7 @@
     border: none;
     background-color: white;
     width: 100%;
+    color: black;
 }
 
 .product-width {
@@ -90,9 +98,10 @@
 .menu, .cart {
     transition: left 0.3s ease, all 0.3s ease, opacity 0.3s ease;
     opacity: 0;
-    width: 80%;
+    width: 100%;
     height: 100%;
     visibility: hidden;
+    margin-bottom: 70px;
     /*
     overflow: hidden;
     overflow-x: clip;
@@ -100,24 +109,20 @@
 }
 
 .menu {
-    position: absolute;
+    position: relative;
     pointer-events: none;
-    margin-left: -100%;
-    margin-right: -100%;
+    margin: auto -100% auto -100%;
 }
 
 .cart {
-    /* position: absolute; */
+    position: fixed;
     pointer-events: none;
-    margin-right: 90%;
-    margin-left: 90%;
+    margin: auto 100% auto 100%;
 }
 
 .menu.active, .cart.active {
-    margin-right: 0;
-    margin-left: 0;
+    margin: auto 0 auto 0;
     pointer-events: auto;
     visibility: visible;
     opacity: 1;
 }
-
