update: cart design

--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -80,7 +80,15 @@
             <li class="list-group-item cart-list">
                 <img src="/static/assets/img/macaroni.jpg" class="cart-img">
                 <h6>product name</h6>
-                <input type="text">
+                <div class="input-group number-spinner">
+                    <button class="btn btn-default">
+                        <span class="material-icons nav_icons">remove</span>
+                    </button>
+                    <input type="number" min="0" class="form-control text-center" value="1">
+                    <button class="btn btn-default">
+                        <span class="material-icons nav_icons">add</span>
+                    </button>
+                </div>
                 <button class="remove-button">
                     <span class="material-icons nav_icons">remove_circle_outline</span>
                 </button>
