update: cart design

--- a/lecture10/pset10/appetieats/templates/menu/menu.html
+++ b/lecture10/pset10/appetieats/templates/menu/menu.html
@@ -80,12 +80,92 @@
             <li class="list-group-item cart-list">
                 <img src="/static/assets/img/macaroni.jpg" class="cart-img">
                 <h6>product name</h6>
-                <div class="input-group number-spinner">
-                    <button class="btn btn-default">
-                        <span class="material-icons nav_icons">remove</span>
+                <div class="qty-group">
+                    <button onclick="decrementQty(this)" class="qty-button">
+                        <span class="material-icons nav_icons decrement">remove</span>
                     </button>
-                    <input type="number" min="0" class="form-control text-center" value="1">
-                    <button class="btn btn-default">
+                    <input type="number" min="1" class="qty-input text-center" value="1" disabled>
+                    <button onclick="incrementQty(this)" class="qty-button increment">
+                        <span class="material-icons nav_icons">add</span>
+                    </button>
+                </div>
+                <button class="remove-button">
+                    <span class="material-icons nav_icons">remove_circle_outline</span>
+                </button>
+            </li>
+            <li class="list-group-item cart-list">
+                <img src="/static/assets/img/macaroni.jpg" class="cart-img">
+                <h6>product name</h6>
+                <div class="qty-group">
+                    <button onclick="decrementQty(this)" class="qty-button">
+                        <span class="material-icons nav_icons decrement">remove</span>
+                    </button>
+                    <input type="number" min="1" class="qty-input text-center" value="1" disabled>
+                    <button onclick="incrementQty(this)" class="qty-button increment">
+                        <span class="material-icons nav_icons">add</span>
+                    </button>
+                </div>
+                <button class="remove-button">
+                    <span class="material-icons nav_icons">remove_circle_outline</span>
+                </button>
+            </li>
+            <li class="list-group-item cart-list">
+                <img src="/static/assets/img/macaroni.jpg" class="cart-img">
+                <h6>product name</h6>
+                <div class="qty-group">
+                    <button onclick="decrementQty(this)" class="qty-button">
+                        <span class="material-icons nav_icons decrement">remove</span>
+                    </button>
+                    <input type="number" min="1" class="qty-input text-center" value="1" disabled>
+                    <button onclick="incrementQty(this)" class="qty-button increment">
+                        <span class="material-icons nav_icons">add</span>
+                    </button>
+                </div>
+                <button class="remove-button">
+                    <span class="material-icons nav_icons">remove_circle_outline</span>
+                </button>
+            </li>
+            <li class="list-group-item cart-list">
+                <img src="/static/assets/img/macaroni.jpg" class="cart-img">
+                <h6>product name</h6>
+                <div class="qty-group">
+                    <button onclick="decrementQty(this)" class="qty-button">
+                        <span class="material-icons nav_icons decrement">remove</span>
+                    </button>
+                    <input type="number" min="1" class="qty-input text-center" value="1" disabled>
+                    <button onclick="incrementQty(this)" class="qty-button increment">
+                        <span class="material-icons nav_icons">add</span>
+                    </button>
+                </div>
+                <button class="remove-button">
+                    <span class="material-icons nav_icons">remove_circle_outline</span>
+                </button>
+            </li>
+            <li class="list-group-item cart-list">
+                <img src="/static/assets/img/macaroni.jpg" class="cart-img">
+                <h6>product name</h6>
+                <div class="qty-group">
+                    <button onclick="decrementQty(this)" class="qty-button">
+                        <span class="material-icons nav_icons decrement">remove</span>
+                    </button>
+                    <input type="number" min="1" class="qty-input text-center" value="1" disabled>
+                    <button onclick="incrementQty(this)" class="qty-button increment">
+                        <span class="material-icons nav_icons">add</span>
+                    </button>
+                </div>
+                <button class="remove-button">
+                    <span class="material-icons nav_icons">remove_circle_outline</span>
+                </button>
+            </li>
+            <li class="list-group-item cart-list">
+                <img src="/static/assets/img/macaroni.jpg" class="cart-img">
+                <h6>product name</h6>
+                <div class="qty-group">
+                    <button onclick="decrementQty(this)" class="qty-button">
+                        <span class="material-icons nav_icons decrement">remove</span>
+                    </button>
+                    <input type="number" min="1" class="qty-input text-center" value="1" disabled>
+                    <button onclick="incrementQty(this)" class="qty-button increment">
                         <span class="material-icons nav_icons">add</span>
                     </button>
                 </div>
