--- a/lecture10/pset10/appetieats/static/css/menu/menu.css
+++ b/lecture10/pset10/appetieats/static/css/menu/menu.css
@@ -74,18 +74,6 @@
     flex: 0 0 auto;
 }
 
-
-@media screen and (max-width: 992px) {
-    .product-width {
-        width: 30% !important;
-    }
-}
-@media screen and (max-width: 576px) {
-    .product-width {
-        width: 45% !important;
-    }
-}
-
 .menu-cart-container {
     display: flex;
     /*
@@ -136,6 +124,7 @@
     align-items: center;
     justify-content: space-between;
 }
+
 .remove-button {
     display: flex;
     align-items: center;
@@ -145,13 +134,16 @@
     border: none;
     background-color: white;
 }
+
 .remove-button:hover {
     transition: all 0.4s ease;
     background-color: #ff000030;
 }
+
 .remove-button span {
     color: red;
 }
+
 .remove-button:hover span {
     color: #ec0000;
 }
@@ -165,4 +157,49 @@
 	flex-wrap: nowrap;
 }
 
+.qty-group {
+    display: flex;
+}
 
+.qty-input {
+    border: 1px solid var(--std-spacegray);
+    outline: 1px solid var(--std-spacegray);
+    font-size: 0.8rem;
+    width: 32px;
+    appearance: textfield;
+    -webkit-appearance: none;
+    -moz-appearance: textfield;
+}
+
+.qty-button {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    border: none;
+    width: 100%;
+    height: 100%;
+}
+
+.list-group {
+    overflow-x: auto;
+    height: 100%;
+    width: 100%;
+    max-height: 100%;
+}
+
+
+@media screen and (max-width: 992px) {
+    .product-width {
+        width: 30% !important;
+    }
+}
+@media screen and (max-width: 767px ) {
+    .cart.active {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 576px) {
+    .product-width {
+        width: 45% !important;
+    }
+}
